# simple-ocr

./: main.py  pyproject.toml
backend/: .env.dist
backend/a_core/: settings.py  urls.py
backend/b_api/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/b_api/migrations/: 0001_initial.py  0002_alter_document_image.py  0003_delete_document.py  0004_initial.py  0005_alter_ocrimage_options.py
client/: .env.dist  basic.py
